--- a/includes/locales/de.json
+++ b/includes/locales/de.json
@@ -71,5 +71,7 @@
 	"69": "Seitenauswahl",
 	"70": "Leer oder im Format 1,3-5",
 	"71": "nur {0} {1} drucken",
-	"72": "Ungültige Eingabe"
+	"72": "Ungültige Eingabe",
+	"73": "Anmelden im AStA Copyclient",
+	"74": "Melden Sie sich im AStA Copyclient mit Ihrem App-Account oder SN und PIN von der AStA Copycard an, um den Druckjob {0} in das Drucksystem hochzuladen."
 }
